--- a/school-fe/src/assets/scss/_variables-galaxy-dark.scss
+++ b/school-fe/src/assets/scss/_variables-galaxy-dark.scss
@@ -9,9 +9,9 @@
 $body-bg-galaxy-dark:                                                      #041324;
 
 $card-bg-fill-dark:                                                 transparent;
-$body-bg-image-1-dark:                                              url('../../images/galaxy/img-1.png');
-$body-bg-image-2-dark:                                              url('../../images/galaxy/img-2.png');
-$body-bg-image-3-dark:                                              url('../../images/galaxy/img-3.png');
+$body-bg-image-1-dark:                                              url('/assets/images/galaxy/img-1.png');
+$body-bg-image-2-dark:                                              url('/assets/images/galaxy/img-2.png');
+$body-bg-image-3-dark:                                              url('/assets/images/galaxy/img-3.png');
 
 [data-theme=galaxy][data-bs-theme=dark]:root {
 
