--- a/school-fe/src/assets/scss/app.scss
+++ b/school-fe/src/assets/scss/app.scss
@@ -12,13 +12,13 @@ File: Main Css File
 @import "fonts/fonts";
 
 //Core files
-@import "./node_modules/bootstrap/scss/functions";
-@import "./node_modules/bootstrap/scss/variables";
+@import "bootstrap/scss/functions";
+@import "bootstrap/scss/variables";
 @import "variables";
 @import "variables-custom";
 @import "variables-dark";
 @import "variables-galaxy-dark";
-@import "./node_modules/bootstrap/scss/mixins";
+@import "bootstrap/scss/mixins";
 
 @import 'theme/default';
 @import 'theme/corporate';
