--- a/school-fe/src/app/layouts/layout/layout.html
+++ b/school-fe/src/app/layouts/layout/layout.html
@@ -1,1 +1,16 @@
-<p>layout works!</p>
+<!-- Vertical layout -->
+@if(layout.isVertical()){
+<app-vertical></app-vertical>
+}
+
+<!-- Horizontal layout -->
+@if(layout.isHorizontal()){
+<app-horizontal></app-horizontal>
+}
+<!-- Two Columns layout -->
+@if(layout.isTwoColumn()){
+<app-two-column></app-two-column>
+}
+<!-- Semibox layout -->
+@if(layout.isSemibox()){
+<app-vertical></app-vertical>}
