--- a/school-fe/src/app/layouts/footer/footer.html
+++ b/school-fe/src/app/layouts/footer/footer.html
@@ -1,1 +1,14 @@
-<p>footer works!</p>
+<footer class="footer">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-6">
+               {{year}} © Velzon.
+            </div>
+            <div class="col-sm-6">
+                <div class="text-sm-end d-none d-sm-block">
+                    Design & Develop by Themesbrand
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
