--- a/school-fe/src/app/layouts/topbar/topbar.html
+++ b/school-fe/src/app/layouts/topbar/topbar.html
@@ -835,11 +835,11 @@
               <span class="text-start ms-xl-2">
                 <span
                   class="d-none d-xl-inline-block ms-1 fw-medium user-name-text"
-                  >{{userData.first_name}} {{userData.last_name}}</span
+                  >{{user?.firstName}} {{user?.lastName}}</span
                 >
                 <span
                   class="d-none d-xl-block ms-1 fs-12 text-muted user-name-sub-text"
-                  >{{userData.role == 0 ? 'Admin':'User'}}</span
+                  >{{auth.hasRole('IT_ADMIN') ? 'ADMIN': user?.roles?.[0] || 'USER'}}</span
                 >
               </span>
             </span>
