added academic session fuctionality

--- a/school-fe/src/app/features/academic/session/session-form/session-form.html
+++ b/school-fe/src/app/features/academic/session/session-form/session-form.html
@@ -1,5 +1,7 @@
 <div class="modal-header bg-light p-3">
-  <h5 class="modal-title" id="exampleModalLabel">{{isEdit ? 'Edit' : 'Add'}} Session</h5>
+  <h5 class="modal-title" id="exampleModalLabel">
+    {{isEdit ? 'Edit' : 'Add'}} Session
+  </h5>
   <button
     type="button"
     class="btn-close"
@@ -44,7 +46,7 @@
       <div class="invalid-feedback">Please enter an start date.</div>
     </div>
 
-   <div class="mb-3">
+    <div class="mb-3">
       <label for="end-date-field" class="form-label">End Date</label>
       <input
         type="date"
